# image-filter

./: .gitignore  CMakeLists.txt  README.md
if-api/: CMakeLists.txt  image_filter.cpp  os_specific_impl.cpp  os_specific_impl.hpp  plugin_manager.cpp
include/: image-filter.h  image_filter.h  plugin_manager.hpp
plugins/: CMakeLists.txt  basic_filters.cpp  core.cpp  plugin1.cpp  plugin2.cpp  plugin3.cpp
samples/: README.md
src/: CMakeLists.txt  PluginManager.hpp  image_filter.cpp  main.cpp  os_specific_impl.hpp  plugin_manager.cpp  plugin_manager.hpp
